[package]
name = "compressible_fluids"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools-num = "*"
csv = "*"
libmath = "*"
ndarray = "*"
num-traits = "*"
bimap = "*"

[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate UUIDs from random data
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
]